samples/_failures_safe/1761395640_27362a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a86967c7.c:147: error: expected ‘;’, ‘,’ or ‘)’ at end of input
